foundry/foundry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-ingress
  namespace: foundry
spec:
  ingressClassName: nginx
  rules:
  - host: vtt.morphos.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foundry-vtt
            port:
              number: 30000
